_archive/content-services/5.0/concepts/ch-configuration.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: Customization
keyword: configuring
---

# Configuring Alfresco

This section describes how to configure Alfresco.

-   **[System path conventions](../reuse/conv-syspaths.md)**  
When using the Alfresco documentation, there are a number of conventions for common system paths.
-   **[Configuration overview](../concepts/configuration-overview.md)**  
Alfresco is preconfigured with a set of system configuration parameters. Many of the system configuration parameters are completely exposed as properties, which you can configure for your specific environment requirements.
-   **[Using the Admin Console](../concepts/at-adminconsole.md)**  
The Admin Console application that gives you control over the management and settings of the Alfresco environment.
-   **[Using the Admin Console](../concepts/at-adminconsole.md)**  
The Admin Console application that gives you control over the management and settings of the Alfresco environment.
-   **[Using the Share Admin Tools](../concepts/admintools.md)**  
Share Admin Tools let you manage your administration operations.
-   **[Configuring databases](../concepts/intro-db-setup.md)**  
This section describes how to configure supported databases for use with Alfresco.
-   **[Advanced database configuration properties](../concepts/db-config-properties.md)**  
As an administrator, you need to edit some advanced properties to customize your database configuration. Many properties, however, do not need to be edited.
-   **[Configuring OpenOffice subsystem](../concepts/OOo-subsystems-intro.md)**  
Within Alfresco, you can transform a document from one format to another. This feature requires you to install LibreOffice or OpenOffice.org.
-   **[Configuring ActiveMQ](../concepts/activemq-overview.md)**  
Alfresco uses ActiveMQ for message queuing with various products, for example Alfresco Analytics and Alfresco Media Management.
-   **[Configuring synchronization](../concepts/sync-intro.md)**  
The synchronization subsystem manages the synchronization of Alfresco with all the user registries \(LDAP servers\) in the authentication chain.
-   **[Configuring email](../concepts/email-intro.md)**  
The email subsystem allows you to configure the outbound and inbound SMTP email settings to interact with Alfresco.
-   **[Configuring file servers](../concepts/fileserv-subsystem-intro.md)**  
The File Server subsystem allows access to the Alfresco data stores through the SMB/CIFS, FTP, and NFS protocols. This allows you to browse to the repository using Windows Explorer or by creating a Network Place.
-   **[Configuring IMAP protocol support](../concepts/imap-intro.md)**  
IMAP protocol support allows email applications that support IMAP \(including Outlook, Apple Mail, Thunderbird, and so on\) to connect to and interact with Alfresco repositories.
-   **[Configuring system properties](../concepts/sysadmin-subsystem-intro.md)**  
The sysAdmin subsystem allows real time control across some of the general repository properties. The sysAdmin subsystem replaces the `RepoServerMgmt` management bean.
-   **[Encrypting configuration properties](../concepts/encrypt-properties.md)**  
The alfresco-global.properties file holds configuration properties that contain sensitive information or passwords, such as `db.password`. This section provides information on the properties that are encryptable and the process to encrypt them using the Alfresco Encrypted Properties Management Tool.
-   **[Configuring the repository](../concepts/intro-core.md)**  
This section describes how to configure the Alfresco repository.
-   **[Configuring Alfresco subsystems](../concepts/subsystem-intro.md)**  
An Alfresco subsystem is a configurable module responsible for a sub-part of Alfresco functionality. Typically, a subsystem wraps an optional functional area, such as IMAP bindings, or one with several alternative implementations, such as authentication.
-   **[Configuring Alfresco Mobile](../topics/mobile-config.md)**  
Alfresco Administrators can easily define the experience for their Alfresco Mobile users by choosing what each user sees in the Alfresco Mobile menu.

**Parent topic:**[Administering](../concepts/ch-administering.md)

